--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,10 +10,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - ./api_yamdb/.env
   
   web:
-    build: .
+    image: ayztuva/yamdb
     volumes:
       - staticfiles:/code/static
     ports:
@@ -22,7 +22,7 @@ services:
     depends_on:
       - db
     env_file: 
-      - ./.env
+      - ./api_yamdb/.env
 
   nginx:
     image: nginx:1.19.6
