--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -26,7 +26,7 @@ jobs:
       run: flake8 .
 
     - name: Test with pytest
-      run: pytest tests.py
+      run: pytest
   
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -57,6 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
 
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
