--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Lint with flake8
       run: flake8 .
 
-    - name: Test with pytest
+    - name: Pytest
       run: pytest
   
   build_and_push_to_docker_hub:
