--- a/host.conf
+++ b/host.conf
@@ -1,9 +1,14 @@
 server {
   listen 80;
   server_name 0.0.0.0;
+  server_tokens off;
 
   location /static/ {
     alias /static/;
+  }
+
+  location /media/ {
+    alias /media/;
   }
 
   location / {
