--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -74,7 +74,8 @@ jobs:
           script: |
             sudo docker pull ayztuva/yamdb
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker-compose up
+            cd ~/deploy/yamdb/
+            docker-compose up
   
   send_message:
     name: Sending results to Telegram Bot
