--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
   tests:
@@ -25,7 +29,7 @@ jobs:
     - name: Lint with flake8
       run: flake8 .
 
-    - name: Pytest
+    - name: Test with pytest
       run: pytest
   
   build_and_push_to_docker_hub:
@@ -57,7 +61,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
 
-    if: github.ref == 'refs/heads/master'
     steps:
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -71,7 +74,8 @@ jobs:
           script: |
             sudo docker pull ayztuva/yamdb
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker-compose up
+            cd ~/deploy/yamdb/
+            docker-compose up
   
   send_message:
     name: Sending results to Telegram Bot
