--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - .env
+      - ./.env
   
   web:
     image: ayztuva/yamdb
@@ -22,7 +22,7 @@ services:
     depends_on:
       - db
     env_file: 
-      - .env
+      - ./.env
 
   nginx:
     image: nginx:1.19.6
