--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 volumes:
   postgres_data:
   staticfiles:
-  media:
+  mediafiles:
 
 services:
   db:
@@ -11,23 +11,24 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ~/deploy/yamdb/.env
+      - .env
   
   web:
     image: ayztuva/yamdb
     volumes:
       - staticfiles:/code/static
-      - media:/code/media
+      - mediafiles:/code/media
     restart: always
     depends_on:
       - db
     env_file: 
-      - ~/deploy/yamdb/.env
+      - .env
 
   nginx:
     image: nginx:1.19.6
     volumes:
-      - staticfiles:/static/
+      - staticfiles:/static
+      - mediafiles:/media
       - ./host.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
