--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
     image: nginx:1.19.6
     volumes:
       - staticfiles:/static/
+      - media:/code/media/
       - ./host.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
