--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with: 
           push: true 
-          tags: ayztuva/yamdb:latest 
+          tags: evangribov/yamdb:latest 
  
   deploy: 
     name: Deploing the project 
@@ -71,7 +71,7 @@ jobs:
           script: | 
             cd ~/deploy/yamdb/
             docker-compose down
-            sudo docker pull ayztuva/yamdb
+            sudo docker pull evangribov/yamdb
             docker-compose up -d
    
   send_message: 
