--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - .env
   
   web:
-    image: ayztuva/yamdb
+    image: evangribov/yamdb
     volumes:
       - staticfiles:/code/static
       - mediafiles:/code/media
