--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -4,7 +4,7 @@ on: [push]
  
 jobs: 
   tests: 
-    name: Run project test 
+    name: Run flake8 
     runs-on: ubuntu-latest 
  
     steps: 
@@ -23,10 +23,7 @@ jobs:
         pip install -r requirements.txt 
  
     - name: Lint with flake8 
-      run: flake8 . 
- 
-    - name: Pytest 
-      run: pytest 
+      run: flake8 .
    
   build_and_push_to_docker_hub: 
     name: Push Docker image to Docker Hub 
